WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135508
Caret not shown at the end of line in overtype mode
https://bugs.webkit.org/show_bug.cgi?id=135508
Summary
Caret not shown at the end of line in overtype mode
Sergio Villar Senin
Reported
2014-08-01 08:38:09 PDT
Caret not shown at the end of line in overtype mode
Attachments
Patch
(9.79 KB, patch)
2014-08-01 08:43 PDT
,
Sergio Villar Senin
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2014-08-01 08:43:10 PDT
Created
attachment 235889
[details]
Patch
Sergio Villar Senin
Comment 2
2014-09-04 08:22:45 PDT
Ping?
Sergio Villar Senin
Comment 3
2014-09-29 06:58:09 PDT
Ryosuke mind reviewing this please? It's almost 2 months old
Ryosuke Niwa
Comment 4
2014-09-29 10:22:39 PDT
Comment on
attachment 235889
[details]
Patch Oops, sorry. I went on a medical leave in August so this patch slipped through.
Sergio Villar Senin
Comment 5
2014-09-30 03:17:33 PDT
Committed
r174097
: <
http://trac.webkit.org/changeset/174097
>
Sergio Villar Senin
Comment 6
2014-09-30 03:18:18 PDT
(In reply to
comment #4
)
> (From update of
attachment 235889
[details]
) > Oops, sorry. I went on a medical leave in August so this patch slipped through.
Oh I hope you're well now. Thanks for the review, the delay is totally understandable.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug